--- a/style.css
+++ b/style.css
@@ -107,11 +107,13 @@ section{
     flex-wrap: wrap;
     position: absolute;
     opacity: 0;
+    justify-content: center;
+
 }
 
 .work-item{
-    width: 390px;
-    height: 250px;
+    width: 250px;
+    height: 240px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -119,8 +121,8 @@ section{
 }
 
 .work-item img{
-    width: 360px;
-    height: 200px;
+    width: 250px;
+    height: 210px;
     object-fit: cover;
     padding: 5px;
 }
@@ -172,24 +174,23 @@ footer a{
         padding-top: 15px;
     }
 
-
     .works{
         flex-direction: row;
         justify-content: center;
     }
 
     .work-item{
-        width: 200px;
-        height: 250px;
+        width: 170px;
+        height: 230px;
     }
 
     .work-item img{
-        width: 200px;
+        width: 170px;
         height: 200px;
     }
 
     footer{
-        display: none;
+        top: 700px;
     }
     
 
