--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html body {
     margin: 0 auto;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: #252627;
 }
 
 nav{
@@ -72,7 +72,7 @@ section{
     font-size: 30px;
     padding-top: 20px;
     padding-bottom: 20px;
-    
+    color: turquoise;
 }
 .title{
     font-size: 20px;
