--- a/style.css
+++ b/style.css
@@ -175,6 +175,9 @@ footer li{
 footer a{
     color: white;
 }
+footer i{
+    font-size: 30px;
+}
 @media screen and (max-width: 1232px) and (min-width: 841px) {
     .description{
         margin-left: 10px;
