--- a/style.css
+++ b/style.css
@@ -205,6 +205,24 @@ footer i{
     }
 }
 
+@media screen and (max-width: 400px) {
+    .name{
+        color: red;
+    }
+    .work-item{
+        width: 150px !important;
+        height: 150px !important;
+    }
+
+    .work-item img{
+        width: 150px !important;
+        height: 110px !important;
+    }
+    footer{
+        top:1100px !important;
+    }
+}
+
 @media screen and (max-width: 840px){
     .about{
         flex-direction: column;
