--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     box-sizing: border-box;
 }
 
-html body {
+body {
     margin: 0 auto;
     width: 100%;
     height: 100%;
@@ -24,14 +24,17 @@ nav{
     border-bottom: 2px solid white;
     padding: 15px;
 }
+
 nav img{
     margin-left: 25px;
     width: 40px;
     height: 40px;
 }
+
 nav ul{
 list-style: none;
 }
+
 nav li{
     display: inline-block;
     padding:10px;
@@ -40,6 +43,7 @@ nav li{
 .nav-link{
     color: white;
 }
+
 .nav-link:hover{
     color:white;
     border-bottom: 1.5px solid salmon; 
@@ -55,36 +59,43 @@ section{
     padding-right: 20px;
     color: white;
 }
+
 .active{
     opacity: 1;
     transition : "all 2s ease-in";
 }
+
 .about{
     /* display: flex; */
     position:absolute;
     opacity: 0;
 }
+
 .bio-description{
     flex: 50%
 }
+
 .name{
     font-size: 30px;
     padding-top: 15px;
     padding-bottom: 15px;
     color: turquoise;
 }
+
 .title{
     font-size: 20px;
     padding-left: 30px;
     padding-bottom: 15px;
     letter-spacing: 1px;
 }
+
 .description{
     margin-left: 70px;
     word-spacing: 10px;
     font-size: 20px;
 
 }
+
 .bio-expertise{
     flex: 50%;
     display:flex;
@@ -99,6 +110,7 @@ section{
     font-size: 20px;
 
 }
+
 .expertise-lang{
     display:flex;
     flex-wrap: wrap;
@@ -111,6 +123,7 @@ section{
     text-align: center;
     padding-top: 15px;
 }
+
 .expertise:hover{
     transform: rotateY(360deg);
     transition: all 3s;
@@ -119,6 +132,7 @@ section{
 .expertise i{
     color: white;
 }
+
 .works{
     display: flex;
     flex-wrap: wrap;
@@ -176,14 +190,18 @@ footer li{
 footer a{
     color: white;
 }
+
 footer i{
     font-size: 30px;
 }
+
 @media screen and (max-width: 1232px) and (min-width: 841px) {
+
     .description{
         margin-left: 10px;
         padding: 10px;
     }
+
     .expertise{
         width: 100px;
         height: 120px;
@@ -194,53 +212,35 @@ footer i{
     }
 }
 
-@media screen and (max-width: 839px) and (min-width: 560px) {
-    .work-item{
-        width: 200px !important;
-        height: 230px !important;
-    }
-
-    .work-item img{
-        width: 200px !important;
-        height: 200px !important;
-    }
-
-    footer{
-    top:680px !important ;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    .work-item{
-        width: 150px !important;
-        height: 150px !important;
-    }
-
-    .work-item img{
-        width: 150px !important;
-        height: 110px !important;
-    }
-    footer{
-        top:1100px !important;
-    }
-}
-
 @media screen and (max-width: 840px){
+
+    nav{
+        padding: 5px;
+    }
+
+    nav img{
+        margin-left: 15px;
+    }
+
     .about{
         flex-direction: column;
     }
+    
     .description{
         margin-left: 10px;
     }
+
     .expertise{
         width: 100px;
         height: 100px;
         text-align: center;
         padding-top: 15px;
     }
+
     .skills-expertise p {
         margin-left: 10px;    
     }
+
     .works{
         flex-direction: row;
         justify-content: center;
@@ -261,4 +261,43 @@ footer i{
     }
     
 
+}
+
+@media screen and (max-width: 839px) and (min-width: 560px) {
+
+    .work-item{
+        width: 200px !important;
+        height: 230px !important;
+    }
+
+    .work-item img{
+        width: 200px !important;
+        height: 200px !important;
+    }
+
+    footer{
+    top:680px !important ;
+    }
+
+}
+
+@media screen and (max-width: 400px) {
+    
+    nav li{
+        padding: 5px;
+    }
+    .work-item{
+        width: 150px !important;
+        height: 150px !important;
+    }
+
+    .work-item img{
+        width: 150px !important;
+        height: 110px !important;
+    }
+
+    footer{
+        top:1100px !important;
+    }
+    
 }
